# flute-cli

./: Cargo.toml  agents.md  dist-workspace.toml  readme.md
.github/workflows/: ci.yml  release.yml
docs/reference/: openapi-ach-customers.md  openapi-pos-devices.md  openapi-settlements-subs-tokens.md  openapi-transactions.md
docs/superpowers/plans/: 2026-06-02-flute-cli.md
docs/superpowers/specs/: 2026-06-02-flute-cli-design.md
src/: config.rs  lib.rs  main.rs  update.rs  update_check.rs
src/api/: error.rs  mod.rs
src/api/client/: ach.rs  customers.rs  devices.rs  mod.rs  pos.rs  settlements.rs  subscriptions.rs  terminals.rs  tokens.rs  transactions.rs
src/api/models/: common.rs  mod.rs  transactions.rs
src/auth/: keychain.rs  mod.rs  token.rs
src/cli/: ach.rs  auth.rs  customers.rs  devices.rs  mod.rs  money.rs  output.rs  pos.rs  settlements.rs  subscriptions.rs  terminals.rs  tokens.rs  transactions.rs  util.rs
tests/: ach.rs  completions.rs  customers.rs  devices.rs  ping_smoke.rs  pos.rs  settlements.rs  subscriptions.rs  terminals.rs  tokens.rs  transactions.rs
tests/golden/transactions/: inspect_table.txt  list_table.txt  sale_table.txt
